--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,16 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+html,
+body {
+    font-family:'Times New Roman', Times, serif ;
+    font-size: 18px;
+    background-color: #d6c08a;
+}
+
+h1 {
+    color: #000000;
+    font-weight: 800;
+    font-size: 40px;
+}
